# UpPr

./: .env.example  .gitignore  Dockerfile  Dockerfile.bak  README.md  fly.toml  pyproject.toml  railway.json  render.yaml  requirements.txt
.hermes/plans/: 2026-06-26_upwork-proposal-pipeline.md
app/: analytics.py  apify_client.py  config.py  db.py  job_scorer.py  main.py  notion_sync.py  poller.py  proposal_templates.py  proposal_writer.py  routes.py  slack_notifier.py
app/static/: style.css
app/templates/: analytics.html  base.html  index.html  proposals.html  settings.html
